ros2_ws/log/build_2023-10-24_15-36-44/mi_paquete_python/stderr.log
  File "/home/simon/Documents/ARO/ros2_ws/install/mi_paquete_python/lib/python3.10/site-packages/mi_paquete_python/move_turtle.py", line 12
    self.srv = self.create_service(StringService, 'string_service', self.move_turtle_callback)รง
                                                                                              ^^
SyntaxError: invalid syntax

